--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
   <header role="banner">
     <nav role="navigation" class="navbar navbar-static-top navbar-default">
       <div class="cotainer">
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="#">Link1</a></li>
+            <li><a href="#">Link2</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
         <div class="navbar header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icob-bar"></span>
+            </button>
           <a class="navbar-brand" href="index .html"><h2>公・孙</h2></a>
         </div>
         <ul class="nav navbar-nav">
