--- a/index.html
+++ b/index.html
@@ -37,13 +37,8 @@
               <span class="icon-bar"></span>
               <span class="icob-bar"></span>
             </button>
-          <a class="navbar-brand" href="index .html"><h2>公・孙</h2></a>
+          <a class="navbar-brand" href="index .html">公・孙</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="index.html">主页</a></li>
-          <li><a href="#">Link1</a></li>
-          <li><a href="#">Link2</a></li>
-        </ul>
       </div>
     </nav>
   </header>
