--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <span class="icon-bar"></span>
               <span class="icob-bar"></span>
             </button>
-          <a class="navbar-brand" href="index .html">公・孙</a>
+          <img src="logo.png" alt="公・孙・社・区" width="240">
         </div>
       </div>
     </nav>
